Fix for flaky assertion